build/log/idf_py_stderr_output_51517
/home/pi/httptc/main/nvs_store.c: In function 'load_target_temp':
/home/pi/httptc/main/nvs_store.c:33:6: error: 'target_temp' undeclared (first use in this function); did you mean 'load_target_temp'?
   33 |     *target_temp = settings.temp;
      |      ^~~~~~~~~~~
      |      load_target_temp
/home/pi/httptc/main/nvs_store.c:33:6: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:108: esp-idf/main/CMakeFiles/__idf_main.dir/nvs_store.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
